# diffusion_mri

./: 1fib.flt  LICENSE  basis_321_6.txt  bibtex.txt  example.ini  readme.txt  reconstruction.py  utils.py
C++/: CMakeLists.txt  DOTReconstructor.cpp  DOTReconstructor.h  FltFile.cpp  FltFile.h  MoWReconstructor.cpp  MoWReconstructor.h  QBIReconstructor.cpp  QBIReconstructor.h  Reconstructor.cpp  Reconstructor.h  myendian.c  myendian.h  nnls.cc  nnls.h  port_ini.c  port_ini.h  reconstruction.cpp  special_functions.cpp  special_functions.h  spherical_harmonics.cpp  spherical_harmonics.h  test_dot.cpp  test_mow.cpp  test_qbi.cpp  utilities.cpp  utilities.h
Python/: flt_utils.py  ipmi07_exp.py  lsqnonneg.py  mhd_utils.py  reconstruction.py  simulation.py  spherical_harmonics.py  spherical_splines.py  test_condition_number.py  utils.py
data/: 1fib.mhd  1fib.raw  2fib.flt  2fib.mhd  2fib.raw  3fib.flt  3fib.mhd  3fib.raw  81vectors.txt  basis_321_8.txt  data.txt  example.ini  vis_spharm.sav
